cluster/prometheus-stack/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
######################################
### Prometheus stack 
######################################
  - host: alertmanager.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-kube-prometheus-stack-alertmanager
            port: 
              number: 9093
  - host: grafana.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-grafana
            port: 
              number: 80
  - host: prometheus.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-kube-prometheus-stack-prometheus
            port: 
              number: 9090
